--- a/directories/fiware-summit/agenda/filters.html
+++ b/directories/fiware-summit/agenda/filters.html
@@ -63,11 +63,11 @@
           <option value='ai---machine-learning'>AI &amp; Machine Learning</option>
           <option value='ai-and-natural-language-for-smart-cities'>AI and Natural Language for Smart Cities</option>
           <option value='building-smart-governance-with-interoperability'>Building Smart Governance with Interoperability</option>
-          <option value='core-concepts'>Core Concepts</option>
           <option value='data-spaces---security'>Data Spaces &amp; Security</option>
           <option value='digital-product-passports---data-sovereignty-in-climate-resilient-cities'>Digital Product Passports &amp; Data Sovereignty in Climate-Resilient Cities</option>
           <option value='digital-twins-for-real-time-optimization-of-sporting-mega-events'>Digital Twins for Real-Time Optimization of Sporting Mega-Events</option>
           <option value='fiware-catalog'>FIWARE Catalog</option>
+          <option value='fiware-core-concepts'>FIWARE Core Concepts</option>
           <option value='global-fiware-use-cases-shaping-smart-cities-for-2030'>Global FIWARE Use Cases Shaping Smart Cities for 2030</option>
           <option value='legal-and-data-space-frameworks-for-secure-cities-and-resilient-event-management'>Legal and Data Space Frameworks for Secure Cities and Resilient Event Management</option>
           <option value='next-generation-governance'>Next-Generation Governance</option>
