--- a/directories/fiware-summit/agenda/program/sitemap.html
+++ b/directories/fiware-summit/agenda/program/sitemap.html
@@ -79,14 +79,14 @@ li {
 		<li><a href="https://www.fiware.org/fgs-2025/success-story-in-the-tenerife-island--aligning-with-environmental-sustainability.html">Success Story in the Tenerife Island, Aligning With Environmental Sustainability</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/next-generation-governance--where-smart-meets-digital.html">Next-Generation Governance: Where Smart Meets Digital</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/e-gov-moroccan-context.html">E-gov Moroccan Context</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/digital-twin-basic-programming-using-ngsi-ld--crud--registrations--subscriptions.html">Digital Twin Basic Programming using NGSI-LD: CRUD, Registrations, Subscriptions</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/digital-twin-programming-using-ngsi-ld--crud--registrations--subscriptions.html">Digital Twin Programming using NGSI-LD: CRUD, Registrations, Subscriptions</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/innovative-digital-platforms-for-smart-governance-and-urban-management.html">Innovative Digital Platforms for Smart Governance and Urban Management</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/smart-metropolis-fiware-ihub--leading-brazil-s-smart-city-transformation-with-open-standards.html">Smart Metropolis FIWARE iHub: Leading Brazil’s Smart City Transformation with Open Standards</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/lunch.html">Lunch</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/when-intelligence-meets-endurance--ai---data-driven-cities-for-the-fifa-world-cup-2030.html">When Intelligence Meets Endurance: AI &amp; Data-Driven Cities for the FIFA World Cup 2030</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/blue-cities-of-tomorrow--ai---iot-for-smart-water-and-resilient-cities.html">Blue Cities of Tomorrow: AI &amp; IoT for Smart Water and Resilient Cities</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/smart-data-spaces-for-high-profile-events--enabling-interoperability--trust--and-real-time-insight.html">Smart Data Spaces for High Profile Events: Enabling Interoperability, Trust, and Real-Time Insight</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/digital-twin-intermediate-programming-using-ngsi-ld--temporal-operations--geofencing.html">Digital Twin Intermediate Programming Using NGSI-LD: Temporal Operations, Geofencing</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/mlops---fiware.html">MLOps &amp; FIWARE</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/enabling-interoperable-data-exchange-between-systems.html">Enabling Interoperable Data Exchange Between Systems</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/from-smart-meters-to-digital-twins--how-fiwarebox-simplifies-and-accelerates-fiware-based-smart-city-data-integration-and-visualization-on-a-budget.html">From Smart Meters to Digital Twins: How FIWAREBox Simplifies and Accelerates FIWARE-Based Smart City Data Integration and Visualization on a Budget</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/orchestrating-data-sovereignty-for-circular-and-climate-resilient-cities.html">Orchestrating Data Sovereignty for Circular and Climate-Resilient Cities</a></li>
@@ -111,7 +111,7 @@ li {
 		<li><a href="https://www.fiware.org/fgs-2025/registration-and-welcome-coffee.html">Registration and Welcome Coffee</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/governing-trust--legal-and-data-space-frameworks-for-secure-cities-and-resilient-event-management.html">Governing Trust: Legal and Data Space Frameworks for Secure Cities and Resilient Event Management</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/fiware-training.html">FIWARE Training</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/basic-identity-and-access-management-principles-in-systems-powered-by-fiware--oauth2--pep--pdp---pap--jwt.html">Basic Identity and Access Management Principles in Systems Powered by FIWARE: OAuth2; PEP, PDP , PAP; JWT</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/identity-and-access-control-in-fiware-systems.html">Identity and Access Control in FIWARE Systems</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/exploiting-fiware-potential-for-ehds-regulation-compliance.html">Exploiting FIWARE Potential for EHDS Regulation Compliance</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/overview-of-fiware-data-space-components.html">Overview of FIWARE Data Space Components</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/deploying-a-data-space-connector.html">Deploying a Data Space Connector</a></li>
