update agenda and speakers

--- a/directories/fiware-summit/agenda/calendar.html
+++ b/directories/fiware-summit/agenda/calendar.html
@@ -328,7 +328,7 @@ li {
 		</li>
 		<li>
             
-			<a href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=MLOps &amp; FIWARE&details=Tech Training - AI &amp; Machine Learning++++Speakers:+David Campo,,&ctz=Africa/Casablanca&location=Room RIF&dates=20250522T143000/20250522T150000">MLOps &amp; FIWARE</a>
+			<a href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=Machine Learning, MLOps &amp; FIWARE&details=Tech Training - AI &amp; Machine Learning++++Speakers:+David Campo,,&ctz=Africa/Casablanca&location=Room RIF&dates=20250522T143000/20250522T150000">Machine Learning, MLOps &amp; FIWARE</a>
              - Tech Training - AI &amp; Machine Learning
 			<div class="date-time">
 	            <span class="separator-dot"></span>
