Update job titles

--- a/directories/fiware-summit/speakers/people.html
+++ b/directories/fiware-summit/speakers/people.html
@@ -546,7 +546,7 @@
                 </div>
                 <div class='profile-details'>
                     <h6 class='name cat-bio' data-modal='21'>Francisco Meléndez</h6>
-                    <h4 class='position cat-bio' data-modal='21'>Technical Expert &amp; Evangelist</h4>
+                    <h4 class='position cat-bio' data-modal='21'>Technical Community Coordinator</h4>
                     <h5 class='company-link'><a target='_blank' href='https://www.fiware.org/' rel='noopener'>FIWARE Foundation</a></h5>
                 </div>
                 <div class='icons'>
