--- a/directories/people/team/people.html
+++ b/directories/people/team/people.html
@@ -521,7 +521,7 @@
                 <div class='profile-details'>
                 <div class='cat-bio' data-modal='18'>
                     <h6 class='name'>Francisco Meléndez</h6>
-                    <h4 class='position'>Tech Expert &amp; Evangelist – Robotics &amp; Automation</h4>
+                    <h4 class='position'>Technical Community Coordinator – Robotics &amp; Automation</h4>
                     <a target='_blank' href='https://www.fiware.org/' rel='noopener'>
                         <h5 class='company-link'>FIWARE Foundation</h5>
                     </a>
