--- a/directories/people/tsc/people.html
+++ b/directories/people/tsc/people.html
@@ -1,4 +1,4 @@
-        <div id="item-0" class="grid-item fiware-foundation   data-modeling-expert evangelist ">
+        <div id="item-0" class="grid-item fiware-foundation   coo ">
             <div class='f-cat active'>
                 <div class='cat-bio' data-modal='0'>
                 <div class='city-photo-container'>
@@ -10,8 +10,8 @@
                 </div>
                 <div class='profile-details'>
                 <div class='cat-bio' data-modal='0'>
-                    <h6 class='name'>Alberto Abella</h6>
-                    <h4 class='position'>Data Modeling Expert &amp; Evangelist</h4>
+                    <h6 class='name'>Dr. Alberto Abella</h6>
+                    <h4 class='position'>Chief Operations Officer</h4>
                     <a target='_blank' href='https://www.fiware.org/' rel='noopener'>
                         <h5 class='company-link'>FIWARE Foundation e.V.</h5>
                     </a>
@@ -622,7 +622,7 @@
                 </div>
                 <div class='profile-details'>
                     <h6 class='name'>Francisco Meléndez</h6>
-                    <h4 class='position'>Technical Expert &amp; Evangelist</h4>
+                    <h4 class='position'>Technical Community Coordinator</h4>
                     <a target='_blank' href='https://www.fiware.org/' rel='noopener'>
                         <h5 class='company-link'>FIWARE Foundation e.V.</h5>
                     </a>
