--- a/directories/fiware-summit/speakers/people.html
+++ b/directories/fiware-summit/speakers/people.html
@@ -467,7 +467,7 @@
                 </div>
                 </div>
                 <div class='profile-details'>
-                    <h6 class='name cat-bio' data-modal='18'>Jin</h6>
+                    <h6 class='name cat-bio' data-modal='18'>Jin Kawasaki</h6>
                     <h4 class='position cat-bio' data-modal='18'>Head Researcher</h4>
                     <h5 class='company-link'><a target='_blank' href='https://www.mitsubishielectric.com/en/index.html' rel='noopener'>Mitsubishi Electric</a></h5>
                 </div>
@@ -475,7 +475,7 @@
                         <a class='cat-linkedin' target='_blank' href='https://www.linkedin.com/in/jin-kawasaki-817809205/?original_referer&#x3D;https%3A%2F%2Fwww%2Egoogle%2Ecom%2F&amp;originalSubdomain&#x3D;jp' rel='noopener'><span
                                 class='icon linkedin'
                             ></span></a>
-                    <a class="btn-primary" href="https://www.fiware.org/global-summit/agenda/?speaker=jin">
+                    <a class="btn-primary" href="https://www.fiware.org/global-summit/agenda/?speaker=jin-kawasaki">
                         <span class="material-symbols-outlined icon">mic</span>
                         FGS Talks
                     </a>
