--- a/directories/fiware-summit/agenda/filters.html
+++ b/directories/fiware-summit/agenda/filters.html
@@ -47,6 +47,7 @@
           <option value='circular-economy---urban-development'>Circular Economy &amp; Urban Development</option>
           <option value='data-spaces---interoperability'>Data Spaces &amp; Interoperability</option>
           <option value='digital-twins---data-harmonization'>Digital Twins &amp; Data Harmonization</option>
+          <option value='global-fiware-use-cases'>Global FIWARE Use Cases</option>
           <option value='grand-opening'>Grand Opening</option>
           <option value='organization'>Organization</option>
           <option value='research---development'>Research &amp; Development</option>
