--- a/directories/fiware-summit/agenda/filters.html
+++ b/directories/fiware-summit/agenda/filters.html
@@ -108,6 +108,7 @@
           <option value='gerardo-guarino-f-'>Gerardo Guarino F.</option>
           <option value='aawatif-hayar'>Aawatif Hayar</option>
           <option value='antonio-jara'>Antonio Jara</option>
+          <option value='jin-kawasaki'>Jin Kawasaki</option>
           <option value='jure-lampe'>Jure Lampe</option>
           <option value='frederico-lopes'>Frederico Lopes</option>
           <option value='francisco-meléndez'>Francisco Meléndez</option>
@@ -118,6 +119,7 @@
           <option value='matteo-repetto'>Matteo Repetto</option>
           <option value='alessandro-rossi'>Alessandro Rossi</option>
           <option value='björn-schwarze'>Björn Schwarze</option>
+          <option value='megumi-suzuki'>Megumi Suzuki</option>
           <option value='brecht-van-de-vyvere'>Brecht van de Vyvere</option>
           <option value='stefan-wiedemann'>Stefan Wiedemann</option>
           <option value='ken-zangelin'>Ken Zangelin</option>
