--- a/directories/fiware-summit/agenda/calendar.html
+++ b/directories/fiware-summit/agenda/calendar.html
@@ -350,13 +350,13 @@ li {
 		</li>
 		<li>
             
-			<a href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=From Smart Meters to Digital Twins: How FIWAREBox Simplifies and Accelerates FIWARE-Based Smart City Data Integration and Visualization on a Budget&details=Digital Twins &amp; Data Harmonization - AI &amp; Data-Driven Cities for the FIFA World Cup 2030++++Speakers:+Jure Lampe,,&ctz=Africa/Casablanca&location=Auditorium&dates=20250522T144000/20250522T145000">From Smart Meters to Digital Twins: How FIWAREBox Simplifies and Accelerates FIWARE-Based Smart City Data Integration and Visualization on a Budget</a>
+			<a href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=From Smart Meters to Digital Twins: How FIWAREBox Simplifies and Accelerates FIWARE-Based Smart City Data Integration and Visualization on a Budget&details=Digital Twins &amp; Data Harmonization - AI &amp; Data-Driven Cities for the FIFA World Cup 2030++++Speakers:+Jure Lampe,,&ctz=Africa/Casablanca&location=Room Jbel Ayachi&dates=20250522T144000/20250522T145000">From Smart Meters to Digital Twins: How FIWAREBox Simplifies and Accelerates FIWARE-Based Smart City Data Integration and Visualization on a Budget</a>
              - Digital Twins &amp; Data Harmonization - AI &amp; Data-Driven Cities for the FIFA World Cup 2030
 			<div class="date-time">
 	            <span class="separator-dot"></span>
 	            <span class="time">2:40 pm - 2:50 pm</span>
 	        </div>
-	        <div class="place">Auditorium</div>
+	        <div class="place">Room Jbel Ayachi</div>
             
 		</li>
 		<li>
