--- a/directories/fiware-summit/speakers/filters.html
+++ b/directories/fiware-summit/speakers/filters.html
@@ -63,6 +63,7 @@
                         <option value='latitudo-40'>Latitudo 40</option>
                         <option value='libelium'>Libelium</option>
                         <option value='mitsubishi-electric'>Mitsubishi Electric</option>
+                        <option value='mohammed-vi-polytechnic-university'>Mohammed VI Polytechnic University</option>
                         <option value='nec-corporation'>NEC Corporation</option>
                         <option value='oasc'>OASC</option>
                         <option value='parthenope-university'>Parthenope University</option>
