--- a/directories/fiware-summit/agenda/filters.html
+++ b/directories/fiware-summit/agenda/filters.html
@@ -101,18 +101,19 @@
           <option value='javier-conde-díaz'>Javier Conde Díaz</option>
           <option value='luigi-coppolino'>Luigi Coppolino</option>
           <option value='andrea-cruciani'>Andrea Cruciani</option>
-          <option value='mohamed-dafir'>Mohamed Dafir</option>
           <option value='gert-de-tant'>Gert De Tant</option>
           <option value='amal-el-fellah-seghrouchni'>Amal El Fellah Seghrouchni</option>
           <option value='jason-fox'>Jason Fox</option>
           <option value='gerardo-guarino-f-'>Gerardo Guarino F.</option>
           <option value='aawatif-hayar'>Aawatif Hayar</option>
+          <option value='dr--hicham-el-habti'>Dr. Hicham El Habti</option>
           <option value='antonio-jara'>Antonio Jara</option>
           <option value='jin-kawasaki'>Jin Kawasaki</option>
           <option value='jure-lampe'>Jure Lampe</option>
           <option value='frederico-lopes'>Frederico Lopes</option>
           <option value='francisco-meléndez'>Francisco Meléndez</option>
           <option value='yasunori-mochizuki'>Yasunori Mochizuki</option>
+          <option value='prof--mohamed-dafir'>Prof. Mohamed Dafir</option>
           <option value='sashiko-muto'>Sashiko Muto</option>
           <option value='khalid-ouakka'>Khalid Ouakka</option>
           <option value='manfredi-pistone'>Manfredi Pistone</option>
