--- a/directories/fiware-summit/speakers/people.html
+++ b/directories/fiware-summit/speakers/people.html
@@ -295,7 +295,7 @@
                         <a class='cat-linkedin' target='_blank' href='https://www.linkedin.com/in/dafir-elkettani/?locale&#x3D;en_US' rel='noopener'><span
                                 class='icon linkedin'
                             ></span></a>
-                    <a class="btn-primary" href="https://www.fiware.org/global-summit/agenda/?speaker=mohamed-dafir">
+                    <a class="btn-primary" href="https://www.fiware.org/global-summit/agenda/?speaker=prof--mohamed-dafir">
                         <span class="material-symbols-outlined icon">mic</span>
                         FGS Talks
                     </a>
