fgs agenda content updates

--- a/directories/fiware-summit/agenda/calendar.html
+++ b/directories/fiware-summit/agenda/calendar.html
@@ -229,7 +229,7 @@ li {
 		</li>
 		<li>
             
-			<a href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=Success Story in the Tenerife Island, Aligning With Environmental Sustainability&details=Global FIWARE Use Cases - Global FIWARE Use Cases Shaping Smart Cities for 2030++++Speakers:+Jose Benítez,,&ctz=Africa/Casablanca&location=Auditorium&dates=20250522T114000/20250522T115000">Success Story in the Tenerife Island, Aligning With Environmental Sustainability</a>
+			<a href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=The Use Case is the Goal. Interoperability is the Means. FIWARE is the Core.&details=Global FIWARE Use Cases - Global FIWARE Use Cases Shaping Smart Cities for 2030++++Speakers:+Jose Benítez,,&ctz=Africa/Casablanca&location=Auditorium&dates=20250522T114000/20250522T115000">The Use Case is the Goal. Interoperability is the Means. FIWARE is the Core.</a>
              - Global FIWARE Use Cases - Global FIWARE Use Cases Shaping Smart Cities for 2030
 			<div class="date-time">
 	            <span class="separator-dot"></span>
