fgs agenda content updates

--- a/directories/fiware-summit/agenda/agenda.html
+++ b/directories/fiware-summit/agenda/agenda.html
@@ -1008,10 +1008,10 @@
     <div class="gridElementTextContainer">
       <a href="./program-details-summary?id=orchestrating-data-sovereignty-for-circular-and-climate-resilient-cities">
         <div class="chip-track">
-          <div class="track light-purple">Circular Economy &amp; Urban Development</div>
+          <div class="track light-blue">Circular Economy &amp; Urban Development</div>
           
         </div>
-        <p class="panel-title light-purple ">Orchestrating Data Sovereignty for Circular and Climate-Resilient Cities</p> 
+        <p class="panel-title light-blue ">Orchestrating Data Sovereignty for Circular and Climate-Resilient Cities</p> 
         <span class="excerpt">Digital Product Passports &amp; Data Sovereignty in Climate-Resilient Cities</span>
         <div class="panel-info">
           <div class="date-time">
