adding FGS speakers

--- a/directories/fiware-summit/speakers/filters.html
+++ b/directories/fiware-summit/speakers/filters.html
@@ -54,23 +54,31 @@
                         <option value='artech-international-bvba'>Artech International BVBA</option>
                         <option value='associação-porto-digital'>Associação Porto Digital</option>
                         <option value='cnr---imati'>CNR / IMATI</option>
+                        <option value='data-valley-consulting--university-of-padova--italy-'>Data Valley Consulting, University of Padova (Italy)</option>
                         <option value='digital-development-agency--add-'>Digital Development Agency (ADD)</option>
+                        <option value='dksr---data-competence-center-for-cities-and-regions'>DKSR - Data Competence Center for Cities and Regions</option>
                         <option value='engineering'>Engineering</option>
+                        <option value='eurecat'>Eurecat</option>
                         <option value='ficodes'>Ficodes</option>
                         <option value='fiware-foundation'>FIWARE Foundation</option>
                         <option value='government-of-morocco'>Government of Morocco</option>
                         <option value='ishare-foundation'>iSHARE Foundation</option>
                         <option value='latitudo-40'>Latitudo 40</option>
                         <option value='libelium'>Libelium</option>
+                        <option value='meaningfy'>Meaningfy</option>
                         <option value='mitsubishi-electric'>Mitsubishi Electric</option>
+                        <option value='mitsubishi-electric-corporation'>Mitsubishi Electric Corporation</option>
                         <option value='mohammed-vi-polytechnic-university'>Mohammed VI Polytechnic University</option>
                         <option value='nec-corporation'>NEC Corporation</option>
                         <option value='oasc'>OASC</option>
                         <option value='parthenope-university'>Parthenope University</option>
+                        <option value='prometheus-x'>Prometheus-x</option>
+                        <option value='rise-research-institutes-of-sweden'>RISE Research Institutes of Sweden</option>
                         <option value='secmotic'>Secmotic</option>
                         <option value='senlab-d-o-o-'>SenLab d.o.o.</option>
                         <option value='sirus'>Sirus</option>
                         <option value='smart-cities-morocco-alliance'>Smart Cities Morocco Alliance</option>
+                        <option value='telefonica'>Telefonica</option>
                         <option value='ufrn'>UFRN</option>
                         <option value='université-mohammed-v-de-rabat'>Université Mohammed V de Rabat</option>
                         <option value='upm'>UPM</option>
@@ -86,6 +94,7 @@
                         <option value='assistant-professor'>Assistant Professor</option>
                         <option value='ceo'>CEO</option>
                         <option value='chairman'>Chairman</option>
+                        <option value='chairman-fiware-tsc'>Chairman FIWARE TSC</option>
                         <option value='coo'>COO</option>
                         <option value='director'>Director</option>
                         <option value='evangelist'>Evangelist</option>
@@ -98,6 +107,7 @@
                         <option value='minister-delegate'>Minister Delegate</option>
                         <option value='owner'>Owner</option>
                         <option value='professor'>Professor</option>
+                        <option value='program-manager'>Program Manager</option>
                         <option value='researcher'>Researcher</option>
                         <option value='technical-expert'>Technical Expert</option>
             </select>
