--- a/directories/fiware-summit/speakers/people.html
+++ b/directories/fiware-summit/speakers/people.html
@@ -868,8 +868,7 @@
                 </div>
                 <div class='profile-details'>
                     <h6 class='name' data-modal='34'>Rubén Rosales Patón</h6>
-                    <h4 class='position' data-modal='34'>Smart Cities &amp; Innovation Hubs Product Manager
-Telefónica</h4>
+                    <h4 class='position' data-modal='34'>Smart Cities &amp; Innovation Hubs Product Manager</h4>
                     <h5 class='company-link'><a target='_blank' href='https://www.telefonica.com/en/' rel='noopener'>Telefonica</a></h5>
                 </div>
                 <div class='icons'>
