--- a/directories/fiware-summit/agenda/program-details-summary/index.html
+++ b/directories/fiware-summit/agenda/program-details-summary/index.html
@@ -949,7 +949,7 @@ z-index: 99999;
 				
 				<div class="et_pb_code_inner"><div class="panel-info detail summary">
     <div class="event-title">
-      <a href="https://www.fiware.org/global-summit" alt="FGS Website" rel="noopener"><span>10thFIWARE Global Summit</span></a>
+      <a href="https://www.fiware.org/global-summit" alt="FGS Website" rel="noopener"><span>FIWARE Global Summit</span></a>
     </div>
     <span class="separator-dot detail"></span>
     <div class="date detail">
@@ -967,7 +967,7 @@ z-index: 99999;
         <span class="material-symbols-outlined icon">location_on</span>
         <span id="place">Room</span>
       </div>
-      <a class="venue" href="https://maps.app.goo.gl/pXj5mZVE2SN3Q6Wk6" target="_blank" alt="Venue Address" rel="noopener">
+     <a class="venue" href="../locations/index.html" target="_blank" alt="Venue Address" rel="noopener">
         <span style="border-bottom: 1px solid">UM6P – Rabat, Morocco</span>
       </a>
     </div>
