--- a/directories/fiware-summit/agenda/program/index.html
+++ b/directories/fiware-summit/agenda/program/index.html
@@ -981,7 +981,7 @@ z-index: 99999;
         <span class="material-symbols-outlined icon">location_on</span>
         <span id="place">Room</span>
       </div>
-      <a class="venue" href="../locations/index.html" target="_blank" alt="Venue Address" rel="noopener">
+      <a class="venue" href="../../locations/index.html" target="_blank" alt="Venue Address" rel="noopener">
         <span style="border-bottom: 1px solid">UM6P – Rabat, Morocco</span>
       </a>
     </div>
